# kube-nimble

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  LICENSE  README.md
.github/: release.yaml
.github/workflows/: ci.yaml  gh-pages.yaml  release.yaml
crd/: nimble.ivaltryek.github.com.yaml
docs/: _config.yaml  index.md  v0.1.0.md  v0.2.0.md  v0.3.0.md  v0.5.0.md  v0.6.0.md  v0.7.0.md
examples/: deployment-configmapref-cm.yaml  deployment-env.yaml  deployment-envfrom-configmapref-multi.yaml  deployment-envfrom-configmapref.yaml  deployment-envfrom-full.yaml  deployment-envfrom-secretref-multi.yaml  deployment-envfrom-secretref.yaml  deployment-liveness-exec.yaml  deployment-liveness-httpget.yaml  deployment-liveness-tcp.yaml  deployment-readiness-exec.yaml  deployment-readiness-httpget.yaml  deployment-readiness-tcp.yaml  deployment-resources.yaml  deployment-secretfrom-secrets.yaml  deployment-service-hpa.yaml  deployment-startup-exec.yaml  deployment-startup-httpget.yaml  deployment-startup-tcp.yaml  deployment-svc-hpa-ing.yaml  deployment-with-service.yaml  simple-deployment.yaml
manifests/: deployment.yaml  rbac.yaml  serviceaccount.yaml
src/: crdgen.rs  main.rs  nmexport.rs
src/common/: helper.rs  mod.rs
src/controllers/: client.rs  dpcontroller.rs  hpacontroller.rs  ingcontroller.rs  mod.rs  servicecontroller.rs
src/crds/: deploymentspec.rs  hpaspec.rs  ingspec.rs  mod.rs  nimble.rs  servicespec.rs
src/transformers/: deployment.rs  hpa.rs  ingress.rs  mod.rs  service.rs
