[package]
name = "kube-nimble"
version = "0.6.0"
edition = "2021"
authors = ["Meet Vasani <meet.vasani86@gmail.com>"]

[[bin]]
name = "crdgen"
path = "src/crdgen.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

kube = { version = "0.88", default-features = true, features = [
  "derive",
  "runtime",
] }

k8s-openapi = { version = "0.21", default-features = false, features = [
  "v1_26",
] }

futures = "0.3.30"

serde = "1"
serde_json = "1.0"
serde_yaml = "0.9"
schemars = "0.8"
thiserror = "1"

tracing = "0.1.36"
tracing-subscriber = "0.3.3"
